// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "github.com/barklan/cto/pkg/protos/porter";

package protos;

service Porter {
  rpc ProjectAlert (ProjectAlertRequest) returns (Message) {}
  rpc InternalAlert (Message) returns (Message) {}
  rpc NewIssue (NewIssueRequest) returns (Message) {}
}

message ProjectAlertRequest {
  string project = 1;
  string message = 2;
}

message NewIssueRequest {
  string project = 1;
  string key = 2;
  string timestamp = 3;
  string env = 4;
  string service = 5;
  string flag = 6;
}

message Message {
  string message = 1;
}
